// (-- api-linter: core::0191::java-outer-classname=disabled
//     aip.dev/not-precedent: I don't care about java. --)
// (-- api-linter: core::0191::java-multiple-files=disabled
//     aip.dev/not-precedent: I don't care about java. --)
// (-- api-linter: core::0191::java-package=disabled
//     aip.dev/not-precedent: I don't care about java. --)

syntax = "proto3";

package api.meals.recipe.v1alpha1;

import "api/types/permission_level.proto";
import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";

// the recipe service
service RecipeService {
  // create a recipe
  rpc CreateRecipe(CreateRecipeRequest) returns (Recipe) {
    option (google.api.method_signature) = "parent,recipe,recipe_id";
    option (google.api.http) = {
      post: "/meals/v1alpha1/{parent=users/*}/recipes"
      body: "recipe"
    };
  }

  // list recipes
  rpc ListRecipes(ListRecipesRequest) returns (ListRecipesResponse) {
    option (google.api.method_signature) = "parent";
    option (google.api.http) = {get: "/meals/v1alpha1/{parent=users/*}/recipes"};
  }

  // update a recipe
  rpc UpdateRecipe(UpdateRecipeRequest) returns (Recipe) {
    option (google.api.method_signature) = "recipe,update_mask";
    option (google.api.http) = {
      patch: "/meals/v1alpha1/{recipe.name=users/*/recipes/*}"
      body: "recipe"
    };
  }

  // delete` a recipe
  rpc DeleteRecipe(DeleteRecipeRequest) returns (Recipe) {
    option (google.api.method_signature) = "name";
    option (google.api.http) = {delete: "/meals/v1alpha1/{name=users/*/recipes/*}"};
  }

  // get a recipe
  rpc GetRecipe(GetRecipeRequest) returns (Recipe) {
    option (google.api.method_signature) = "name";
    option (google.api.http) = {get: "/meals/v1alpha1/{name=users/*/recipes/*}"};
  }

  // share a recipe
  rpc ShareRecipe(ShareRecipeRequest) returns (ShareRecipeResponse) {
    option (google.api.method_signature) = "name,recipients";
    option (google.api.http) = {
      post: "/meals/v1alpha1/{name=users/*/recipes/*}:share"
      body: "*"
    };
  }
}

// the main recipe object
message Recipe {
  option (google.api.resource) = {
    type: "api.meals.recipe.v1alpha1/Recipe"
    pattern: "users/{user}/recipes/{recipe}"
    plural: "recipes"
    singular: "recipe"
  };

  // the name of the recipe
  string name = 1 [(google.api.field_behavior) = IDENTIFIER];

  // the title of the recipe
  string title = 2 [(google.api.field_behavior) = REQUIRED];

  // the description of the recipe
  string description = 3 [(google.api.field_behavior) = OPTIONAL];

  // the steps to make the recipe
  repeated Direction directions = 4 [(google.api.field_behavior) = OPTIONAL];

  // the ingredient groups in the recipe
  repeated IngredientGroup ingredient_groups = 5 [(google.api.field_behavior) = OPTIONAL];

  // image url
  string image_uri = 10 [(google.api.field_behavior) = OPTIONAL];

  // the directions to make the recipe
  message Direction {
    // the title of the step
    string title = 1 [(google.api.field_behavior) = OPTIONAL];
    // the steps in the instruction
    repeated string steps = 2 [(google.api.field_behavior) = REQUIRED];
  }

  message IngredientGroup {
    // the name of the group
    string title = 1 [(google.api.field_behavior) = OPTIONAL];
    // the ingredients in the group
    repeated Ingredient ingredients = 2 [(google.api.field_behavior) = REQUIRED];
  }

  // an ingredient in a recipe
  message Ingredient {
    // the name of the ingredient
    string title = 2 [(google.api.field_behavior) = REQUIRED];
    // wheter the ingredient is optional
    bool optional = 3 [(google.api.field_behavior) = OPTIONAL];
    // the quantity of the ingredient
    double measurement_amount = 4 [(google.api.field_behavior) = REQUIRED];
    // the type of measurement
    MeasurementType measurement_type = 5 [(google.api.field_behavior) = REQUIRED];
  }

  // the type of measurement
  enum MeasurementType {
    // the measurement is in cups
    MEASUREMENT_TYPE_UNSPECIFIED = 0;
    // the measurement is in tablespoons
    MEASUREMENT_TYPE_TABLESPOON = 1;
    // the measurement is in teaspoons
    MEASUREMENT_TYPE_TEASPOON = 2;
    // the measurement is in ounces
    MEASUREMENT_TYPE_OUNCE = 3;
    // the measurement is in pounds
    MEASUREMENT_TYPE_POUND = 4;
    // the measurement is in grams
    MEASUREMENT_TYPE_GRAM = 5;
    // the measurement is in milliliters
    MEASUREMENT_TYPE_MILLILITER = 6;
    // the measurement is in liters
    MEASUREMENT_TYPE_LITER = 7;
  }
}

// the request to create a recipe
message CreateRecipeRequest {
  // the parent of the recipe
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).child_type = "api.meals.recipe.v1alpha1/Recipe"
  ];
  // the recipe to create
  Recipe recipe = 2 [(google.api.field_behavior) = REQUIRED];

  // the id of the recipe
  string recipe_id = 3 [(google.api.field_behavior) = REQUIRED];
}

// the request to list recipes
message ListRecipesRequest {
  // the parent of the recipe
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).child_type = "api.meals.recipe.v1alpha1/Recipe"
  ];
  // returned page
  int32 page_size = 2 [(google.api.field_behavior) = OPTIONAL];
  // used to specify the page token
  string page_token = 3 [(google.api.field_behavior) = OPTIONAL];
  // used to specify the filter
  string filter = 4 [(google.api.field_behavior) = OPTIONAL];
}

// the response to list recipes
message ListRecipesResponse {
  // the recipes
  repeated Recipe recipes = 1;
  // the next page token
  string next_page_token = 2;
}

// the request to update a recipe
message UpdateRecipeRequest {
  // the recipe to update
  Recipe recipe = 1 [(google.api.field_behavior) = REQUIRED];

  // the fields to update
  google.protobuf.FieldMask update_mask = 2 [(google.api.field_behavior) = OPTIONAL];
}

// the request to delete a recipe
message DeleteRecipeRequest {
  // the name of the recipe to delete
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "api.meals.recipe.v1alpha1/Recipe"
  ];
}

// the request to get a recipe
message GetRecipeRequest {
  // the name of the recipe to get
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "api.meals.recipe.v1alpha1/Recipe"
  ];
}

// the request to share a recipe
message ShareRecipeRequest {
  // the name of the recipe to share
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "api.meals.recipe.v1alpha1/Recipe"
  ];

  // the recipents of the recipe
  repeated string recipients = 2 [(google.api.field_behavior) = REQUIRED];

  // the permission level given to the recipients
  // if it is not provided, permission will be revoked
  // if it is provided, the permission will be granted
  api.types.PermissionLevel permission = 3 [(google.api.field_behavior) = OPTIONAL];
}

// the response to share a recipe
message ShareRecipeResponse {}
